Fix flexbox and make work on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,25 +1,62 @@
 /* Hello! */
 
-body, .wrapper, .item {
+* {
+    box-sizing: border-box;
+}
+
+html {
+    min-width: 300px;
+    height: 100%;
     padding: 0;
     margin: 0;
 }
 
-.wrapper {
+body {
+    min-height: 100%;
+}
+
+body, .item {
+    padding: 0;
+    margin: 0;
+}
+
+.row, body {
     display: flex;
-    flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    min-width: 100vw;
-    min-height: 100vh;
+    align-items: stretch;
+}
+
+body {
+    flex-direction: column;
+}
+
+.row {
+    flex-direction: row;
 }
 
 .item {
-    flex-grow: 4;
+    flex-grow: 3;
     background-color: #eee;
-    height: 50vh;
+    height: 40vh;
 }
 
 .spacer {
     flex-grow: 1;
+}
+
+@media screen and (max-width: 750px) {
+    body {
+        margin-top: 15px;
+    }
+
+    .item {
+        margin-right: 15px;
+        margin-left: 15px;
+        margin-bottom: 15px;
+        height: 30vh;
+    }
+
+    .row {
+        flex-direction: column;
+    }
 }
